# siphon-fhe

./: .env.prod.template  .gitignore  AWS_DEPLOYMENT.md  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml
decryptor/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
decryptor/src/: main.rs
docs/: PHALA_TEE_DECRYPTOR.md
fhe/: Cargo.toml  Dockerfile  README.md
fhe/src/: main.rs
fhe/src/fhe_engine/: core.rs
fhe/src/handlers/: evaluation_handler.rs
proving-relayer/: Dockerfile  app.py  config.py  prover.py  requirements.txt
siphon-payload-generator-demo/: Cargo.toml  Dockerfile  README.md
siphon-payload-generator-demo/src/: fhe_core.rs  main.rs
trade-executor/: .env.example  Dockerfile  README.md  address_validator.py  admin_wallets.py  app.py  auth.py  commitments.py  condition_evaluator.py  config.py  database.py  decryptor_client.py  entrypoint.sh  evm_chain_config.py  evm_executor.py  executor_runner.py  fee_calc.py  fee_config.py  fee_ledger.py  fee_sweep.py  fhe_client.py  gunicorn.conf.py  lifi_executor.py  note_db.py  notes.py  oracle.py  package-lock.json  package.json  precommitments.py  requirements.txt  scheduler.py  test_db.py  trade_executor.py  wallet_auth.py
