[package]
name = "syphon-payload-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework (Keep Axum, remove Actix)
axum = "0.6" 
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4", features = ["cors"] } # Version 0.4 matches Axum 0.6

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

# HTTP Client (to talk to Python)
reqwest = { version = "0.11", features = ["json"] }

# Encryption
tfhe = { version = "0.5", features = ["integer", "seeder_unix"] }